<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_task_sequence</name>
  <version>2.5.1</version>
  <description>Implementation of phase-sequence tasks for the Robotics Middleware Framework</description>
  <maintainer email="grey@openrobotics.org">Grey</maintainer>
  <maintainer email="marco@openrobotics.org">Marco A. Gutiérrez</maintainer>
  <maintainer email="yadunund@openrobotics.org">Yadunund</maintainer>
  <license>Apache License 2.0</license>
  <author>Grey</author>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>rmf_api_msgs</depend>
  <depend>rmf_task</depend>
  <depend>nlohmann-json-dev</depend>
  <depend>nlohmann_json_schema_validator_vendor</depend>

  <test_depend>ament_cmake_catch2</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
